# gm-language

./: Cargo.toml  readme.md
examples/: love_story.gm  test.gm
src/: error.rs  fun.rs  main.rs  runner.rs  shared_types.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
